# influx-telegraf_opcmqtt

./: .env  .env.example  .gitignore  docker-compose.yml
docs/: InfluxDB3_LineProtocol.md  README.md
grafana/docker/: notes.md
grafana/docker/gf_dev_compose/: docker-compose.yml
grafana/docker/gf_dev_compose/config/: config.json
grafana/docker/gf_dev_compose/gf_provisioning/: datasources.yml
grafana/provisioning/datasources/: datasources.yml
influxdb/Influx_Docker_tokenAuto/: docker-compose.yml  notes.md
influxdb/config/: config.json
influxdb/influxDB3_docker_dev/: .dockerignore  docker-compose.yml
influxdb/influxDB3_docker_dev2/: docker-compose.yml  grafana.env  influx.env
influxdb/influxDB3_docker_dev2/app/: .env.app  Dockerfile  influx_setup.py  run.py  writer.py
influxdb/influxDB3_docker_dev3/: docker-compose.yml
influxdb/influxDB3_docker_telegraf/: docker-compose.yml
influxdb/influxDB3_docker_telegraf/telegraf/: telegraf.conf
influxdb/influxdb3_explorer_dev1/: docker-compose.yml  grafana.env
influxdb/influxdb3_explorer_dev1/config/: config.json  notes.md
prometheus/: docker-compose.yml  prometheus.yml
prometheus_dev1/: docker-compose.yml
prometheus_dev1/prometheus/: prometheus.yml
py3_PLC/: pyproject.toml
py3_PLC/src/app/: main.py
py3_PLC/src/app/influxdb3_core/dev/: write_data.py
py3_PLC/src/app/py_plc/: comm.py  plc_classes.py
py3_PLC/src/app/py_plc/dev/: read_writedb.py  tag_clases.py
py3_PLC/src/app/py_plc/influx/: ingestor.py
telegraf/: telegraf copy.conf  telegraf.conf
(+1 files in other folders)
