[project]
name = "telegram_reporter"
version = "1.0.0"
description = "A simple application to send notifications to Telegram."
authors = [{ name = "Luis Mdz", email = "luis3mendez6@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
keywords = ["OPC", "InfluxDB3", "IOT"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["influxdb3-python>=0.16.0", "pycomm3>=1.2.14", "pandas>=2.3.3"]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["app"]
